--- a/submodule.html
+++ b/submodule.html
@@ -68,7 +68,7 @@
       <main class="mdl-layout__content">
         <div class="mdl-layout__tab-panel is-active" id="overview">
           <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
-            <button type="button">Yeah, I want more bacon!</button>
+            <button type="button" onclick="cloneBacon()">Yeah, I want more bacon!</button>
           </section>
           <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
             <img src="http://media.washtimes.com.s3.amazonaws.com/media/image/2015/02/23/bacon.jpg" alt="Bacon" style="width: 100%; height: 100%;">
@@ -143,6 +143,12 @@
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
       ga('create', 'UA-XXXXX-X', 'auto');
       ga('send', 'pageview');
+
+      function cloneBacon() {
+        const bacon = document.querySelector('img[alt=Bacon]')
+        const baconParent = bacon.parentElement
+        baconParent.appendChild(bacon.cloneNode(true))
+      }
     </script>
     <!-- Built with love using Web Starter Kit -->
   </body>
