--- a/submodule.html
+++ b/submodule.html
@@ -43,7 +43,7 @@
     material.blue-orange.min.css
     material.purple-indigo.min.css
     -->
-    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-pink.min.css">
+    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.3.0/material.indigo-pink.min.css">
 
     <!-- Material Design icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -63,12 +63,12 @@
         <div class="mdl-layout--large-screen-only mdl-layout__header-row">
         </div>
         <div class="mdl-layout__tab-bar mdl-js-ripple-effect mdl-color--primary-dark">
-          <a href="#overview" class="mdl-layout__tab">Bacon</a>
-          <a href="#checkout" class="mdl-layout__tab is-active">Checkout</a>
+          <a href="#overview" class="mdl-layout__tab is-active">Bacon</a>
+          <a href="#checkout" class="mdl-layout__tab">Checkout</a>
         </div>
       </header>
       <main class="mdl-layout__content">
-        <div class="mdl-layout__tab-panel" id="overview">
+        <div class="mdl-layout__tab-panel is-active" id="overview">
           <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
             <button type="button" onclick="cloneBacon()">Yeah, I want more bacon!</button>
           </section>
@@ -76,46 +76,48 @@
             <img src="http://media.washtimes.com.s3.amazonaws.com/media/image/2015/02/23/bacon.jpg" alt="Bacon" style="width: 100%; height: 100%;">
           </section>
         </div>
-        <div class="mdl-layout__tab-panel bg-grey is-active" id="checkout">
+        <div class="mdl-layout__tab-panel bg-grey" id="checkout">
           <div class="checkout">
             <!-- Input Fields -->
-            <form class="field-groups">
+            <form class="field-groups" onsubmit="validateForm(event)">
               <div class="field-group">
                 <p class="field-group__title">
                   <span class="field-group__title__position">1</span> personal information
                 </p>
                 <div class="fields">
                   <div class="input">
-                    <input type="text" name="first_name" id="first_name" placeholder="Elon">
+                    <input type="text" name="first_name" id="first_name" placeholder="Elon" required>
                     <label for="first_name">first name</label>
                   </div>
                   <div class="input">
-                    <input type="text" name="last_name" id="last_name" placeholder="Musk">
+                    <input type="text" name="last_name" id="last_name" placeholder="Musk" required>
                     <label for="last_name">last name</label>
                   </div>
                   <div class="input">
-                    <input type="email" name="email" id="email" placeholder="nelson@nelsonatuonwu.me">
+                    <input type="email" name="email" id="email" placeholder="nelson@nelsonatuonwu.me" required>
                     <label for="email">Email</label>
                   </div>
                   <div class="input">
-                    <select name="country" id="country" aria-placeholder="placeholder">
+                    <select name="country" id="country" aria-placeholder="placeholder" required>
                       <option value="0" selected disabled>Select a country</option>
-                      <option value="">Nigeria</option>
-                      <option value="">India</option>
+                      <option value="nigeria">Nigeria</option>
+                      <option value="india">India</option>
                       <option value="">Cotonu</option>
                     </select>
                     <label for="country">Country</label>
                   </div>
                   <div class="input">
-                    <input type="text" name="postal_code" id="postal_code" placeholder="110001">
+                    <input type="text" name="postal_code" id="postal_code" placeholder="110001" required>
                     <label for="postal_code">postal code</label>
                   </div>
                   <div class="input">
-                    <input type="text" name="phone_number" id="phone_number" placeholder="(212) - 555 - 3422">
+                    <input type="text" name="phone_number" id="phone_number" placeholder="(212) - 555 - 3422" required>
                     <label for="phone_number">Phone Number</label>
                   </div>
                 </div>
               </div>
+
+              <!-- Payment Details -->
               <div class="field-group">
                 <p class="field-group__title">
                   <span class="field-group__title__position">2</span> payment details
@@ -123,25 +125,25 @@
                 <div class="fields fields--reverse">
                   <div class="input--image">
                     <div class="input">
-                      <input type="text" name="credit_card" id="credit_card" placeholder="0000 - 0000 - 00000 - 0000">
+                      <input type="text" name="credit_card" id="credit_card" placeholder="0000 - 0000 - 00000 - 0000" required>
                       <label for="credit_card">Credit Card Number</label>
                     </div>
                     <img src="/images/visa.svg" alt="">
                   </div>
                   <div class="input--image">
                     <div class="input">
-                      <input type="text" name="security_code" id="security_code" placeholder="***">
+                      <input type="text" name="security_code" id="security_code" placeholder="***" required>
                       <label for="security_code">Security Code</label>
                     </div>
                     <img src="/images/information.svg" alt="">
                   </div>
                   <div class="input">
-                    <input type="text" name="expiration_date" id="expiration_date" placeholder="MM/YY">
+                    <input type="text" name="expiration_date" id="expiration_date" placeholder="MM/YY" required>
                     <label for="expiration_date">Expiration Date</label>
                   </div>
                 </div>
               </div>
-              <button class="btn">complete purchase</button>
+              <button class="btn" type="submit">complete purchase</button>
             </form>
 
             <!-- Cart -->
@@ -234,7 +236,12 @@
       </main>
     </div>
 
-    <script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
+    <div class="mdl-js-snackbar mdl-snackbar" id="snackbar">
+      <div class="mdl-snackbar__text"></div>
+      <button class="mdl-snackbar__action" type="button"></button>
+    </div>
+
+    <script src="https://storage.googleapis.com/code.getmdl.io/1.3.0/material.min.js"></script>
     <!-- build:js(app/) ../../scripts/main.min.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
@@ -248,10 +255,56 @@
       ga('create', 'UA-XXXXX-X', 'auto');
       ga('send', 'pageview');
 
+      let isDOMLoaded = false;
+
+      window.addEventListener('load', function () {
+        isDOMLoaded = true
+      })
+
       function cloneBacon() {
         const bacon = document.querySelector('img[alt=Bacon]')
         const baconParent = bacon.parentElement
         baconParent.appendChild(bacon.cloneNode(true))
+      }
+
+      function showSnackbar(message){
+        let snackbar = document.querySelector('#snackbar')
+        let snackbarData = {
+          message,
+          timeout: (message.length * 100) < 3000 ? 3000 : (message.length * 100)
+        }
+        console.log(snackbar.MaterialSnackbar)
+        snackbar.MaterialSnackbar.showSnackbar(snackbarData)
+      }
+
+      function validateForm(event){
+        event.preventDefault()
+        const elementsArray = [...event.target.elements]
+        const formData = elementsArray.reduce((accumulator, element) => {
+          if (element.id && element.name) {
+            accumulator[element.id] = element?.value
+          }
+          return accumulator
+        }, {})
+        if (Object.values(formData).includes('')) {
+          let errorMessage = generateErrorMessage(formData)
+          showSnackbar(errorMessage)
+        } else {
+          showSnackbar('Form submited successfully')
+        }
+      }
+
+      function generateErrorMessage(formData) {
+        let message = 'The following fields are required: '
+        for (const key in formData) {
+          if (Object.hasOwnProperty.call(formData, key)) {
+            const element = formData[key]
+            if (!element) {
+              message += `${key} ,`
+            }
+          }
+        }
+        return message.slice(0, message.length - 1)
       }
     </script>
     <!-- Built with love using Web Starter Kit -->
